Twenty Twelve: Fixes figcaption alignment.
The figcaption alignment was not the same on the front as in the editor. This resolves that.

Reviewed by audrasjb, karmatosed.
Merges [60343] to the 6.8 branch.
Props nidhidhandhukiya, sabernhardt.
Fixes #63073.


Built from https://develop.svn.wordpress.org/branches/6.8@60427


git-svn-id: http://core.svn.wordpress.org/branches/6.8@59763 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/css/editor-blocks.css
+++ b/wp-content/themes/twentytwelve/css/editor-blocks.css
@@ -141,18 +141,14 @@ Description: Used to style blocks in the editor.
 
 /* Captions */
 
+[class*=" wp-block-"] figcaption,
 [class^="wp-block-"] figcaption,
 [class^="wp-block-"] figcaption.editor-rich-text__tinymce.mce-content-body {
 	color: #757575;
 	font-size: 12px;
 	line-height: 2;
 	font-style: italic;
-	text-align: left;
-}
-
-.rtl [class^="wp-block-"] figcaption,
-.rtl [class^="wp-block-"] figcaption.editor-rich-text__tinymce.mce-content-body {
-	text-align: right;
+	text-align: start;
 }
 
 /* Definition Lists */
